Revise title of write-up

--- a/nested/poisson/LyX/zi.poisson.varying.coef.3.lyx
+++ b/nested/poisson/LyX/zi.poisson.varying.coef.3.lyx
@@ -91,7 +91,7 @@
 
 \shape smallcaps
 \size larger
-Zero-Inflated Poisson Model with Varying 
+Zero-Inflated Poisson Model for Data
 \end_layout
 
 \begin_layout Plain Layout
@@ -101,7 +101,7 @@ Zero-Inflated Poisson Model with Varying
 
 \shape smallcaps
 \size larger
-Coefficients at Three Hierarchical Levels
+Collected in Three Hierarchical Levels
 \end_layout
 
 \end_inset
